--- a/extension/sidepanel.html
+++ b/extension/sidepanel.html
@@ -2,118 +2,158 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <title>Trello Bug Reporter Pro</title>
   <style>
     :root {
-      --md-primary: #0079bf;
-      --md-surface: #ffffff;
-      --md-bg: #f4f5f7;
-      --md-text-main: #172b4d;
-      --md-text-sub: #5e6c84;
-      --md-radius: 12px;
-      --shadow: 0 4px 12px rgba(9, 30, 66, 0.15);
+      --primary: #0079bf;
+      --bg: #f4f5f7;
+      --surface: #ffffff;
+      --text-main: #172b4d;
+      --text-sub: #5e6c84;
+      --border: #dfe1e6;
+      --radius: 8px;
     }
 
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      background-color: var(--md-bg);
-      color: var(--md-text-main);
+      background-color: var(--bg);
+      color: var(--text-main);
       margin: 0;
       padding: 16px;
-      line-height: 1.5;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
     }
 
-    .container { display: flex; flex-direction: column; gap: 16px; }
-
-    .card {
-      background: var(--md-surface);
-      border-radius: var(--md-radius);
-      padding: 20px;
-      box-shadow: var(--shadow);
-      transition: transform 0.2s ease;
+    .section-card {
+      background: var(--surface);
+      border-radius: var(--radius);
+      padding: 16px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.12);
     }
 
-    h2 { font-size: 14px; text-transform: uppercase; letter-spacing: 1px; color: var(--md-text-sub); margin: 0 0 12px 0; }
+    h2 {
+      font-size: 12px;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+      color: var(--text-sub);
+      margin: 0 0 12px 0;
+    }
+
+    .field-group {
+      margin-bottom: 12px;
+    }
+
+    label {
+      font-size: 11px;
+      font-weight: 700;
+      color: var(--text-sub);
+      display: block;
+      margin-bottom: 4px;
+    }
 
     select, textarea {
       width: 100%;
-      padding: 12px;
-      border: 2px solid #dfe1e6;
-      border-radius: 8px;
+      padding: 10px;
+      border: 2px solid var(--border);
+      border-radius: 4px;
       background: #fafbfc;
       font-size: 14px;
-      color: var(--md-text-main);
+      color: var(--text-main);
       box-sizing: border-box;
-      outline: none;
       transition: border-color 0.2s;
     }
 
-    select:focus, textarea:focus { border-color: var(--md-primary); background: #fff; }
+    select:focus, textarea:focus {
+      border-color: var(--primary);
+      outline: none;
+      background: #fff;
+    }
 
-    .btn-group { display: flex; flex-direction: column; gap: 8px; margin-top: 8px; }
+    select:disabled {
+      background: #ebecf0;
+      cursor: not-allowed;
+    }
 
     button {
+      width: 100%;
+      padding: 12px;
+      border: none;
+      border-radius: 4px;
+      font-weight: 600;
+      font-size: 14px;
+      cursor: pointer;
+      transition: background 0.2s;
       display: flex;
       align-items: center;
       justify-content: center;
       gap: 8px;
-      padding: 12px;
-      border: none;
-      border-radius: 8px;
-      font-weight: 600;
-      font-size: 14px;
-      cursor: pointer;
-      transition: all 0.2s;
     }
 
-    #submitBtn { background: var(--md-primary); color: white; }
+    #captureBtn {
+      background: #ebecf0;
+      color: var(--text-main);
+      margin-bottom: 8px;
+    }
+
+    #captureBtn:hover { background: #dfe1e6; }
+
+    #submitBtn {
+      background: var(--primary);
+      color: white;
+      margin-top: 8px;
+    }
+
     #submitBtn:hover { background: #026aa7; }
     #submitBtn:disabled { background: #ebecf0; color: #a5adba; cursor: not-allowed; }
 
-    #captureBtn { background: #ebecf0; color: var(--md-text-main); }
-    #captureBtn:hover { background: #dfe1e6; }
-
     #preview {
       width: 100%;
-      max-height: 180px;
-      object-fit: cover;
-      border-radius: 8px;
-      margin-top: 12px;
+      border-radius: 4px;
+      margin: 8px 0;
       display: none;
-      border: 1px solid #dfe1e6;
+      border: 1px solid var(--border);
     }
 
     .loader {
       display: none;
-      font-size: 12px;
       text-align: center;
-      color: var(--md-primary);
-      margin-top: 8px;
+      color: var(--primary);
+      font-size: 12px;
+      margin-top: 10px;
       font-weight: 500;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="card">
-      <h2>Context</h2>
-      <select id="cardSelect">
-        <option value="">Select Target Card...</option>
+
+  <div class="section-card">
+    <h2>Target Location</h2>
+    <div class="field-group">
+      <label for="boardSelect">1. Select Board</label>
+      <select id="boardSelect">
+        <option value="">Loading boards...</option>
       </select>
     </div>
+    <div class="field-group">
+      <label for="cardSelect">2. Select Card</label>
+      <select id="cardSelect" disabled>
+        <option value="">Select board first...</option>
+      </select>
+    </div>
+  </div>
 
-    <div class="card">
-      <h2>Report Details</h2>
-      <textarea id="description" rows="5" placeholder="Bug 123: Briefly describe the issue..."></textarea>
-      
-      <div class="btn-group">
-        <button id="captureBtn">
-          <span></span> Capture Screenshot
-        </button>
-        <img id="preview" alt="Bug preview" />
-      </div>
+  <div class="section-card">
+    <h2>Bug Report</h2>
+    <button id="captureBtn">Capture Screenshot</button>
+    <img id="preview" alt="Bug Preview" />
+    
+    <div class="field-group" style="margin-top: 8px;">
+      <label for="description">Description</label>
+      <textarea id="description" rows="4" placeholder="e.g. Bug 101: Submit button is overlapping..."></textarea>
     </div>
 
-    <button id="submitBtn">Submit Bug Report</button>
+    <button id="submitBtn">Submit to Trello</button>
     <div id="loader" class="loader">Syncing with Trello...</div>
   </div>
 
