--- a/extension/sidepanel.html
+++ b/extension/sidepanel.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Trello Bug Reporter Pro</title>
+  <title>Benchwarmer</title>
   <style>
     :root {
       --primary: #0079bf;
