--- a/extension/sidepanel.html
+++ b/extension/sidepanel.html
@@ -1,9 +1,173 @@
-<div class="section-card">
-  <h2>Bug Report</h2>
-  <button id="captureBtn">📸 Capture Screenshot</button>
-  <div id="gallery" style="display: flex; gap: 4px; overflow-x: auto; margin: 8px 0;"></div>
-  
-  <textarea id="description" rows="4" placeholder="Bug 101: Desc..."></textarea>
-  <button id="submitBtn">Submit to Trello</button>
-  <div id="loader" class="loader">Uploading...</div>
-</div>
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Benchwarmer</title>
+  <style>
+    :root {
+      --primary: #0079bf;
+      --bg: #f4f5f7;
+      --surface: #ffffff;
+      --text-main: #172b4d;
+      --text-sub: #5e6c84;
+      --border: #dfe1e6;
+      --radius: 8px;
+    }
+
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      background-color: var(--bg);
+      color: var(--text-main);
+      margin: 0;
+      padding: 16px;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+
+    .section-card {
+      background: var(--surface);
+      border-radius: var(--radius);
+      padding: 16px;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
+    }
+
+    h2 {
+      font-size: 12px;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+      color: var(--text-sub);
+      margin: 0 0 12px 0;
+    }
+
+    .field-group {
+      margin-bottom: 12px;
+    }
+
+    label {
+      font-size: 11px;
+      font-weight: 700;
+      color: var(--text-sub);
+      display: block;
+      margin-bottom: 4px;
+    }
+
+    select,
+    textarea {
+      width: 100%;
+      padding: 10px;
+      border: 2px solid var(--border);
+      border-radius: 4px;
+      background: #fafbfc;
+      font-size: 14px;
+      color: var(--text-main);
+      box-sizing: border-box;
+      transition: border-color 0.2s;
+    }
+
+    select:focus,
+    textarea:focus {
+      border-color: var(--primary);
+      outline: none;
+      background: #fff;
+    }
+
+    select:disabled {
+      background: #ebecf0;
+      cursor: not-allowed;
+    }
+
+    button {
+      width: 100%;
+      padding: 12px;
+      border: none;
+      border-radius: 4px;
+      font-weight: 600;
+      font-size: 14px;
+      cursor: pointer;
+      transition: background 0.2s;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+    }
+
+    #captureBtn {
+      background: #ebecf0;
+      color: var(--text-main);
+      margin-bottom: 8px;
+    }
+
+    #captureBtn:hover {
+      background: #dfe1e6;
+    }
+
+    #submitBtn {
+      background: var(--primary);
+      color: white;
+      margin-top: 8px;
+    }
+
+    #submitBtn:hover {
+      background: #026aa7;
+    }
+
+    #submitBtn:disabled {
+      background: #ebecf0;
+      color: #a5adba;
+      cursor: not-allowed;
+    }
+
+    #preview {
+      width: 100%;
+      border-radius: 4px;
+      margin: 8px 0;
+      display: none;
+      border: 1px solid var(--border);
+    }
+
+    .loader {
+      display: none;
+      text-align: center;
+      color: var(--primary);
+      font-size: 12px;
+      margin-top: 10px;
+      font-weight: 500;
+    }
+  </style>
+</head>
+
+<body>
+
+  <div class="section-card">
+    <h2>Target Location</h2>
+    <div class="field-group">
+      <label for="boardSelect">1. Select Board</label>
+      <select id="boardSelect">
+        <option value="">Loading boards...</option>
+      </select>
+    </div>
+    <div class="field-group">
+      <label for="cardSelect">2. Select Card</label>
+      <select id="cardSelect" disabled>
+        <option value="">Select board first...</option>
+      </select>
+    </div>
+  </div>
+
+  <div class="section-card">
+    <div class="section-card">
+      <h2>Bug Report</h2>
+      <button id="captureBtn">📸 Capture Screenshot</button>
+      <div id="gallery" style="display: flex; gap: 4px; overflow-x: auto; margin: 8px 0;"></div>
+
+      <textarea id="description" rows="4" placeholder="Bug 101: Desc..."></textarea>
+      <button id="submitBtn">Submit to Trello</button>
+      <div id="loader" class="loader">Uploading...</div>
+    </div>
+
+    <script src="sidepanel.js"></script>
+</body>
+
+</html>
