--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-  <h2>Trello Bug Automation – Webhook Manager</h2>
+  <h2>Workspace automation - solution suites for Linecraft AI</h2>
 
   <button onclick="createWebhooks()">Create webhooks</button>
   <button onclick="listWebhooks()">List existing webhooks</button>
