fix: partial screen capture and API logs, feat: ability to delete uploaded attachments

--- a/extension/sidepanel.html
+++ b/extension/sidepanel.html
@@ -1,163 +1,45 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="UTF-8">
-  <title>Benchwarmer</title>
   <style>
     :root {
-      --primary: #0079bf;
-      --bg: #f4f5f7;
-      --surface: #ffffff;
-      --text-main: #172b4d;
-      --text-sub: #5e6c84;
-      --border: #dfe1e6;
-      --radius: 8px;
+      --md-primary: #0079bf; --md-error: #eb5a46; --md-bg: #f4f5f7;
+      --md-surface: #ffffff; --md-text: #172b4d; --md-border: #dfe1e6;
     }
-
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      background-color: var(--bg);
-      color: var(--text-main);
-      margin: 0;
-      padding: 16px;
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
+    body { font-family: -apple-system, sans-serif; background: var(--md-bg); color: var(--md-text); margin: 0; padding: 16px; }
+    .card { background: var(--md-surface); border-radius: 8px; padding: 16px; box-shadow: 0 1px 3px rgba(0,0,0,0.1); margin-bottom: 16px; }
+    h2 { font-size: 12px; text-transform: uppercase; color: #5e6c84; margin: 0 0 12px 0; }
+    label { font-size: 11px; font-weight: bold; display: block; margin-bottom: 4px; color: #5e6c84; }
+    select, textarea { width: 100%; padding: 10px; border: 2px solid var(--md-border); border-radius: 4px; box-sizing: border-box; margin-bottom: 12px; font-size: 14px; }
+    .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 8px; margin-bottom: 12px; }
+    button { 
+      padding: 10px; border: none; border-radius: 4px; font-weight: 600; cursor: pointer; 
+      display: flex; align-items: center; justify-content: center; gap: 6px; transition: 0.2s;
     }
-
-    .section-card {
-      background: var(--surface);
-      border-radius: var(--radius);
-      padding: 16px;
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
+    .btn-main { background: var(--md-primary); color: white; width: 100%; padding: 14px; }
+    .btn-sec { background: #ebecf0; color: var(--md-text); }
+    .btn-danger { background: var(--md-error); color: white; }
+    button:hover { opacity: 0.9; }
+    button:disabled { background: #ebecf0; color: #a5adba; }
+    
+    #gallery { display: grid; grid-template-columns: repeat(3, 1fr); gap: 8px; margin: 12px 0; }
+    .thumb-wrap { position: relative; width: 100%; padding-top: 100%; border-radius: 4px; overflow: hidden; border: 1px solid var(--md-border); }
+    .thumb-wrap img, .thumb-wrap video { position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; }
+    .del-btn { 
+      position: absolute; top: 2px; right: 2px; background: rgba(235, 90, 70, 0.9); 
+      color: white; border-radius: 50%; width: 18px; height: 18px; font-size: 12px; line-height: 18px; text-align: center; cursor: pointer;
     }
-
-    h2 {
-      font-size: 12px;
-      text-transform: uppercase;
-      letter-spacing: 0.05em;
-      color: var(--text-sub);
-      margin: 0 0 12px 0;
-    }
-
-    .field-group {
-      margin-bottom: 12px;
-    }
-
-    label {
-      font-size: 11px;
-      font-weight: 700;
-      color: var(--text-sub);
-      display: block;
-      margin-bottom: 4px;
-    }
-
-    select,
-    textarea {
-      width: 100%;
-      padding: 10px;
-      border: 2px solid var(--border);
-      border-radius: 4px;
-      background: #fafbfc;
-      font-size: 14px;
-      color: var(--text-main);
-      box-sizing: border-box;
-      transition: border-color 0.2s;
-    }
-
-    select:focus,
-    textarea:focus {
-      border-color: var(--primary);
-      outline: none;
-      background: #fff;
-    }
-
-    select:disabled {
-      background: #ebecf0;
-      cursor: not-allowed;
-    }
-
-    button {
-      width: 100%;
-      padding: 12px;
-      border: none;
-      border-radius: 4px;
-      font-weight: 600;
-      font-size: 14px;
-      cursor: pointer;
-      transition: background 0.2s;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 8px;
-    }
-
-    #captureBtn {
-      background: #ebecf0;
-      color: var(--text-main);
-      margin-bottom: 8px;
-    }
-
-    #captureBtn:hover {
-      background: #dfe1e6;
-    }
-
-    #submitBtn {
-      background: var(--primary);
-      color: white;
-      margin-top: 8px;
-    }
-
-    #submitBtn:hover {
-      background: #026aa7;
-    }
-
-    #submitBtn:disabled {
-      background: #ebecf0;
-      color: #a5adba;
-      cursor: not-allowed;
-    }
-
-    #preview {
-      width: 100%;
-      border-radius: 4px;
-      margin: 8px 0;
-      display: none;
-      border: 1px solid var(--border);
-    }
-
-    .loader {
-      display: none;
-      text-align: center;
-      color: var(--primary);
-      font-size: 12px;
-      margin-top: 10px;
-      font-weight: 500;
-    }
+    .loader { display: none; text-align: center; font-size: 12px; color: var(--md-primary); margin-top: 8px; font-weight: bold; }
   </style>
 </head>
-
 <body>
-
-  <div class="section-card">
-    <h2>Target Location</h2>
-    <div class="field-group">
-      <label for="boardSelect">1. Select Board</label>
-      <select id="boardSelect">
-        <option value="">Loading boards...</option>
-      </select>
-    </div>
-    <div class="field-group">
-      <label for="cardSelect">2. Select Card</label>
-      <select id="cardSelect" disabled>
-        <option value="">Select board first...</option>
-      </select>
-    </div>
-  </div>
-
-  <div class="section-card">
-    <h2>Bug Context</h2>
+  <div class="card">
+    <h2>Location & Priority</h2>
+    <label>Target Board</label>
+    <select id="boardSelect"><option>Loading...</option></select>
+    <label>Target Card</label>
+    <select id="cardSelect" disabled><option>Select board first</option></select>
     <label>Priority</label>
     <select id="prioritySelect">
       <option value="Low">Low</option>
@@ -167,20 +49,19 @@
     </select>
   </div>
 
-  <div class="section-card">
-    <h2>Capture Suite</h2>
-    <div class="btn-group" style="display: grid; grid-template-columns: 1fr 1fr; gap: 8px;">
-      <button id="captureBtn">📸 Full Tab</button>
-      <button id="partialBtn">✂️ Partial</button>
-      <button id="recordBtn" style="background: #eb5a46; color: white;">🎥 Record</button>
-      <button id="devToolsBtn">🛠️ Log API</button>
+  <div class="card">
+    <h2>Capture Evidence</h2>
+    <div class="grid">
+      <button id="captureBtn" class="btn-sec">📸 Full</button>
+      <button id="partialBtn" class="btn-sec">✂️ Partial</button>
+      <button id="recordBtn" class="btn-sec">🎥 Record</button>
     </div>
     <div id="gallery"></div>
-    <textarea id="description" rows="3" placeholder="Bug 101: Desc..."></textarea>
-    <button id="submitBtn">Submit Report</button>
+    <textarea id="description" rows="4" placeholder="Bug 123: Description..."></textarea>
+    <button id="submitBtn" class="btn-main">Submit Report</button>
+    <div id="loader" class="loader">🚀 Syncing with Trello...</div>
   </div>
 
   <script src="sidepanel.js"></script>
 </body>
-
 </html>
