feat: user authentication

--- a/extension/sidepanel.html
+++ b/extension/sidepanel.html
@@ -5,187 +5,116 @@
   <meta charset="UTF-8">
   <style>
     :root {
-      --md-primary: #0079bf;
-      --md-error: #eb5a46;
-      --md-bg: #f4f5f7;
-      --md-surface: #ffffff;
-      --md-text: #172b4d;
-      --md-text-sub: #5e6c84;
-      --md-border: #dfe1e6;
-      --md-radius: 8px;
+      --primary: #0079bf;
+      --bg: #f4f5f7;
+      --surface: #ffffff;
+      --text: #172b4d;
     }
 
     body {
       font-family: -apple-system, sans-serif;
-      background: var(--md-bg);
-      color: var(--md-text);
+      background: var(--bg);
+      color: var(--text);
       margin: 0;
       padding: 16px;
     }
 
     .card {
-      background: var(--md-surface);
-      border-radius: var(--md-radius);
+      background: var(--surface);
+      border-radius: 8px;
       padding: 16px;
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
       margin-bottom: 16px;
     }
 
-    h2 {
-      font-size: 11px;
-      text-transform: uppercase;
-      color: var(--md-text-sub);
-      margin: 0 0 12px 0;
+    .hidden {
+      display: none !important;
     }
 
-    label {
-      font-size: 11px;
-      font-weight: bold;
-      display: block;
-      margin-bottom: 4px;
-      color: var(--md-text-sub);
-    }
-
+    input,
     select,
     textarea {
       width: 100%;
       padding: 10px;
-      border: 2px solid var(--md-border);
+      border: 2px solid #dfe1e6;
       border-radius: 4px;
       box-sizing: border-box;
-      margin-bottom: 12px;
-      font-size: 14px;
-    }
-
-    .btn-grid {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 8px;
       margin-bottom: 12px;
     }
 
     button {
-      padding: 10px;
+      width: 100%;
+      padding: 12px;
       border: none;
       border-radius: 4px;
       font-weight: 600;
       cursor: pointer;
-      transition: 0.2s;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 6px;
-    }
-
-    .btn-sec {
-      background: #ebecf0;
-      color: var(--md-text);
-    }
-
-    .btn-main {
-      background: var(--md-primary);
+      background: var(--primary);
       color: white;
-      width: 100%;
-      padding: 14px;
     }
 
-    .btn-danger {
-      background: var(--md-error) !important;
-      color: white !important;
-    }
-
-    button:disabled {
-      background: #ebecf0;
-      color: #a5adba;
-      cursor: not-allowed;
+    .btn-outline {
+      background: transparent;
+      border: 2px solid var(--primary);
+      color: var(--primary);
+      margin-top: 8px;
     }
 
     #gallery {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       gap: 8px;
-      margin: 12px 0;
-    }
-
-    .thumb-wrap {
-      position: relative;
-      width: 100%;
-      padding-top: 100%;
-      border-radius: 4px;
-      overflow: hidden;
-      border: 1px solid var(--md-border);
-      background: #eee;
-    }
-
-    .thumb-wrap img,
-    .thumb-wrap video {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
-    .del-btn {
-      position: absolute;
-      top: 2px;
-      right: 2px;
-      background: rgba(235, 90, 70, 0.9);
-      color: white;
-      border-radius: 50%;
-      width: 18px;
-      height: 18px;
-      font-size: 14px;
-      line-height: 16px;
-      text-align: center;
-      cursor: pointer;
-      font-weight: bold;
-      z-index: 10;
-    }
-
-    .loader {
-      display: none;
-      text-align: center;
-      font-size: 12px;
-      color: var(--md-primary);
-      margin-top: 10px;
-      font-weight: 600;
+      margin-bottom: 12px;
     }
   </style>
 </head>
 
 <body>
-  <div class="card">
-    <h2>Project & Priority</h2>
-    <label>Target Board</label>
-    <select id="boardSelect">
-      <option>Loading boards...</option>
-    </select>
-    <label>Target Card</label>
-    <select id="cardSelect" disabled>
-      <option>Select board first</option>
-    </select>
-    <label>Priority</label>
-    <select id="prioritySelect">
-      <option value="Low">Low</option>
-      <option value="Medium" selected>Medium</option>
-      <option value="High">High</option>
-      <option value="Critical">Critical</option>
-    </select>
+
+  <div id="authSection" class="card">
+    <h2 id="authTitle">Sign In</h2>
+    <input type="email" id="email" placeholder="Email Address">
+    <input type="password" id="password" placeholder="Password">
+    <button id="authBtn">Sign In</button>
+    <button id="toggleAuth" class="btn-outline">New to Herder? Sign Up</button>
   </div>
-  <div class="card">
-    <h2>Evidence</h2>
-    <div class="btn-grid">
-      <button id="captureBtn" class="btn-sec">📸 Full Tab</button>
-      <button id="recordBtn" class="btn-sec">🎥 Record Screen</button>
+
+  <div id="appSection" class="hidden">
+    <div class="card">
+      <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
+        <span id="userDisplay" style="font-size: 11px; color: #5e6c84;"></span>
+        <button id="logoutBtn"
+          style="width: auto; padding: 4px 8px; font-size: 10px; background: #eb5a46;">Logout</button>
+      </div>
+      <label>Target Board</label>
+      <select id="boardSelect">
+        <option>Loading...</option>
+      </select>
+      <label>Target Card</label>
+      <select id="cardSelect" disabled>
+        <option>Select board</option>
+      </select>
+      <label>Priority</label>
+      <select id="prioritySelect">
+        <option>Low</option>
+        <option selected>Medium</option>
+        <option>High</option>
+        <option>Critical</option>
+      </select>
     </div>
-    <div id="gallery"></div>
-    <label>Description</label>
-    <textarea id="description" rows="4" placeholder="Bug 123: What's broken?"></textarea>
-    <button id="submitBtn" class="btn-main">Submit to Trello</button>
-    <div id="loader" class="loader">🚀 Syncing evidence...</div>
+
+    <div class="card">
+      <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 8px; margin-bottom: 10px;">
+        <button id="captureBtn" style="background: #ebecf0; color: #172b4d;">📸 Capture</button>
+        <button id="recordBtn" style="background: #ebecf0; color: #172b4d;">🎥 Record</button>
+      </div>
+      <div id="gallery"></div>
+      <textarea id="description" rows="3" placeholder="Bug 123: What's broken?"></textarea>
+      <button id="submitBtn">Submit Report</button>
+    </div>
   </div>
+
+  <script src="libs/supabase.js"></script>
   <script src="sidepanel.js"></script>
 </body>
 
