--- a/extension/sidepanel.html
+++ b/extension/sidepanel.html
@@ -1,77 +1,56 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="UTF-8">
-  <title>Trello Bug Reporter Pro</title>
+  <title>Herder - because bugs shouldn't wait</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
   <div id="authSection" class="card">
     <div class="auth-header">
       <h1 id="authTitle">Sign In</h1>
-      <p style="font-size: 12px; color: var(--md-text-sub); text-align: center;">Access your reporting suite</p>
     </div>
-    <label>Email Address</label>
-    <input type="email" id="email" placeholder="you@company.com">
-    <label>Password</label>
-    <input type="password" id="password" placeholder="••••••••">
+    <input type="email" id="email" placeholder="Email">
+    <input type="password" id="password" placeholder="Password">
     <button id="authBtn">Sign In</button>
     <button id="toggleAuth" class="btn-outline">Need an account? Sign Up</button>
   </div>
 
   <div id="appSection" class="hidden">
     <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 12px;">
-      <span id="userDisplay" style="font-size: 11px; font-weight: 600; color: var(--md-text-sub);"></span>
-      <button id="logoutBtn"
-        style="padding: 4px 8px; font-size: 10px; background: #ebecf0; color: #172b4d;">Logout</button>
+      <span id="userDisplay" style="font-size: 11px; font-weight: 600;"></span>
+      <button id="logoutBtn" style="padding: 4px 8px; font-size: 10px; background: #ebecf0;">Logout</button>
     </div>
 
     <div class="card">
-      <h2>Context & Priority</h2>
-      <label>Target Board</label>
-      <select id="boardSelect">
-        <option>Loading boards...</option>
-      </select>
-
-      <label>Target Card</label>
+      <h2>Context</h2>
+      <select id="boardSelect"><option>Loading boards...</option></select>
       <input type="text" id="cardSearch" placeholder="🔍 Search cards..." style="margin-bottom: 8px;" disabled>
-      <select id="cardSelect" disabled>
-        <option>Select board first</option>
-      </select>
-
-      <label>Priority</label>
+      <select id="cardSelect" disabled><option>Select board first</option></select>
       <select id="prioritySelect">
-        <option value="Low">Low</option>
-        <option value="Medium" selected>Medium</option>
-        <option value="High">High</option>
-        <option value="Critical">Critical</option>
+        <option value="Low">Low</option><option value="Medium" selected>Medium</option>
+        <option value="High">High</option><option value="Critical">Critical</option>
       </select>
     </div>
 
     <div class="card">
       <h2>Evidence & Details</h2>
       <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 8px; margin-bottom: 12px;">
-        <button id="captureBtn" class="btn-sec">Capture screenshot</button>
-        <button id="recordBtn" class="btn-sec">Record screen</button>
+        <button id="captureBtn" class="btn-sec">Screenshot</button>
+        <button id="recordBtn" class="btn-sec">Record video</button>
       </div>
       <div id="gallery"></div>
-
-      <label>Bug Title (List Item)</label>
-      <input type="text" id="bugTitle" placeholder="Bug 101: Short summary">
-
+      <label>Bug Title (Checklist)</label>
+      <input type="text" id="bugTitle" placeholder="Bug 101: Summary">
       <label>Bug Description (Comment)</label>
-      <textarea id="description" rows="3" placeholder="Explain the steps to reproduce..."></textarea>
-
-      <button id="submitBtn">Submit to Trello</button>
-      <div id="loader" class="loader">Syncing report...</div>
+      <textarea id="description" rows="3" placeholder="Reproduction steps..."></textarea>
+      <button id="submitBtn">Submit Report</button>
+      <div id="loader" class="loader">Syncing...</div>
     </div>
   </div>
 
   <script src="libs/supabase.js"></script>
   <script src="sidepanel.js"></script>
 </body>
-
 </html>
