--- a/extension/sidepanel.html
+++ b/extension/sidepanel.html
@@ -2,13 +2,14 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Herder</title>
+  <title>Trello Bug Reporter Pro</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <div id="authSection" class="card">
     <div class="auth-header">
+      <div class="auth-logo">🎯</div>
       <h1 id="authTitle">Sign In</h1>
       <p style="font-size: 12px; color: var(--md-text-sub); text-align: center;">Access your reporting suite</p>
     </div>
@@ -47,8 +48,8 @@
     <div class="card">
       <h2>Evidence & Details</h2>
       <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 8px; margin-bottom: 12px;">
-        <button id="captureBtn" class="btn-sec">Take Screenshot</button>
-        <button id="recordBtn" class="btn-sec">Record screen</button>
+        <button id="captureBtn" class="btn-sec">📸 Full Tab</button>
+        <button id="recordBtn" class="btn-sec">🎥 Record</button>
       </div>
       <div id="gallery"></div>
 
@@ -59,7 +60,7 @@
       <textarea id="description" rows="3" placeholder="Bug 101: Explain the steps to reproduce..."></textarea>
 
       <button id="submitBtn">Submit to Trello</button>
-      <div id="loader" class="loader">Syncing report...</div>
+      <div id="loader" class="loader">🚀 Syncing report...</div>
     </div>
   </div>
 
