--- a/extension/sidepanel.html
+++ b/extension/sidepanel.html
@@ -254,10 +254,10 @@
           <option>Select board first</option>
         </select>
         <select id="prioritySelect">
-          <option value="Low">Low (1pt)</option>
-          <option value="Medium" selected>Medium (3pts)</option>
-          <option value="High">High (5pts)</option>
-          <option value="Critical">Critical (10pts)</option>
+          <option value="Low">Low</option>
+          <option value="Medium" selected>Medium</option>
+          <option value="High">High</option>
+          <option value="Critical">Critical</option>
         </select>
       </div>
 
