--- a/extension/sidepanel.html
+++ b/extension/sidepanel.html
@@ -6,7 +6,7 @@
   <title>Herder: Bug Reporter</title>
   <link rel="stylesheet" href="style.css">
   <style>
-    /* Inline styles for Gamification elements */
+    /* --- GAMIFICATION & UI STYLES --- */
     .nav-tabs {
       display: flex;
       gap: 0;
@@ -211,6 +211,63 @@
       font-size: 10px;
       color: #6b778c;
     }
+
+    .hidden {
+      display: none !important;
+    }
+
+    /* --- EDITOR STYLES --- */
+    #imageEditor {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #fff;
+      z-index: 999;
+      display: flex;
+      flex-direction: column;
+      padding: 10px;
+      box-sizing: border-box;
+    }
+
+    .editor-tools {
+      display: flex;
+      gap: 5px;
+      margin-bottom: 10px;
+      flex-wrap: wrap;
+    }
+
+    .editor-btn {
+      padding: 6px 10px;
+      font-size: 12px;
+      border: 1px solid #dfe1e6;
+      background: #fff;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    .editor-btn.active {
+      background: #e6fcff;
+      border-color: #0079bf;
+      font-weight: bold;
+      color: #0079bf;
+    }
+
+    .canvas-container {
+      flex: 1;
+      overflow: auto;
+      border: 1px solid #ebecf0;
+      border-radius: 4px;
+      background: #f4f5f7;
+      position: relative;
+    }
+
+    #screenshotCanvas {
+      max-width: 100%;
+      cursor: crosshair;
+      display: block;
+    }
   </style>
 </head>
 
@@ -231,7 +288,6 @@
   </div>
 
   <div id="appSection" class="hidden">
-
     <div style="display: flex; justify-content: space-between; align-items: center; padding: 0 5px 10px;">
       <span id="userDisplay" style="font-size: 11px; font-weight: 600; color: #6b778c;"></span>
       <button id="logoutBtn"
@@ -254,10 +310,10 @@
           <option>Select board first</option>
         </select>
         <select id="prioritySelect">
-          <option value="Low">Low</option>
-          <option value="Medium" selected>Medium</option>
-          <option value="High">High</option>
-          <option value="Critical">Critical</option>
+          <option value="Low">Low (1pt)</option>
+          <option value="Medium" selected>Medium (3pts)</option>
+          <option value="High">High (5pts)</option>
+          <option value="Critical">Critical (10pts)</option>
         </select>
       </div>
 
@@ -269,7 +325,7 @@
         </div>
         <div id="gallery"></div>
 
-        <label>Bug Title (Checklist)</label>
+        <label>Bug Title (Checklist Item)</label>
         <input type="text" id="bugTitle" placeholder="Bug 101: Summary">
 
         <label>Description (Comment)</label>
@@ -295,7 +351,6 @@
         <div style="font-size: 10px; font-weight:700; color: #5e6c84; letter-spacing: 0.5px;">ACHIEVEMENTS</div>
         <div id="badgesGrid" class="badges-grid"></div>
       </div>
-
       <div class="league-toggle-container">
         <span>📅 Monthly</span>
         <label class="switch">
@@ -304,22 +359,19 @@
         </label>
         <span>🏛️ All-Time</span>
       </div>
-
       <div class="card" style="padding: 0; overflow: hidden;">
         <div
           style="background: #f4f5f7; padding: 8px 12px; font-size: 11px; font-weight: 700; color: #5e6c84; border-bottom: 1px solid #dfe1e6;">
-          TOP HERDERS
-        </div>
+          TOP HERDERS</div>
         <div id="leaderboardList">
           <div style="padding: 20px; text-align: center; color: #6b778c;">Loading...</div>
         </div>
       </div>
     </div>
-
   </div>
 
-  <script src="libs/supabase.js"></script>
-  <script src="sidepanel.js"></script>
-</body>
-
-</html>
+  <div id="imageEditor" class="hidden">
+    <div class="editor-tools">
+      <button class="editor-btn active" id="toolCrop">✂️ Crop</button>
+      <button class="editor-btn" id="toolHighlight">🖍️ Highlight</button>
+      <button class
