--- a/extension/sidepanel.html
+++ b/extension/sidepanel.html
@@ -395,7 +395,7 @@
     </div>
   </div>
 
-  <script src="supabase.js"></script>
+  <script src="libs/supabase.js"></script>
   <script src="sidepanel.js"></script>
 </body>
 
