--- a/extension/sidepanel.html
+++ b/extension/sidepanel.html
@@ -380,10 +380,9 @@
   <div id="imageEditor" class="hidden">
     <div class="editor-tools">
       <button class="editor-btn active" id="toolSelect">👆 Move</button>
-      <button class="editor-btn" id="toolCrop">✂️ Crop</button>
-      <button class="editor-btn" id="toolRect">⬛ Rect</button>
-      <button class="editor-btn" id="toolCircle">⏺ Circle</button>
-      <button class="editor-btn" id="toolText">🔤 Text</button>
+      <button class="editor-btn" id="toolRect">Add Rectangle</button>
+      <button class="editor-btn" id="toolCircle">Add Circle</button>
+      <button class="editor-btn" id="toolText">Add Text</button>
       <div style="flex: 1;"></div>
       <button class="editor-btn" id="btnDelete" style="color: red; border-color: red; display: none;">🗑️</button>
       <button class="editor-btn" id="btnSaveEdit" style="background: #0079bf; color: white; border: none;">✅
