feat: style changes

--- a/extension/sidepanel.html
+++ b/extension/sidepanel.html
@@ -14,7 +14,7 @@
     <div class="auth-header">
       <div class="auth-logo">🐑</div>
       <h1 id="authTitle">Herder</h1>
-      <p style="font-size: 12px; color: var(--md-text-sub); text-align: left;">Workspace Automation</p><br>
+      <p style="font-size: 12px; color: var(--md-text-sub); text-align: left;">By Workspace Automation</p><br>
     </div>
     <label>Email</label>
     <input type="email" id="email" placeholder="your organization's email">
@@ -120,10 +120,10 @@
   <div id="imageEditor" class="hidden">
     <div class="editor-tools">
       <button class="editor-btn active" id="toolSelect">👆 Move</button>
-      <button class="editor-btn" id="toolCrop">✂️ Crop</button>
-      <button class="editor-btn" id="toolRect">⬛ Rect</button>
-      <button class="editor-btn" id="toolCircle">⏺ Circle</button>
-      <button class="editor-btn" id="toolText">🔤 Text</button>
+      <button class="editor-btn" id="toolCrop">Crop</button>
+      <button class="editor-btn" id="toolRect">Rectangle</button>
+      <button class="editor-btn" id="toolCircle">Circle</button>
+      <button class="editor-btn" id="toolText">Text</button>
       <div style="flex: 1;"></div>
       <button class="editor-btn" id="btnDelete" style="color: red; border-color: red; display: none;">🗑️</button>
       <button class="editor-btn" id="btnSaveEdit" style="background: #0079bf; color: white; border: none;">✅
