--- a/extension/sidepanel.html
+++ b/extension/sidepanel.html
@@ -69,6 +69,8 @@
         </div>
       </div>
 
+      <div id="latestBugPill" class="bug-pill hidden">Latest: Bug</div>
+
       <div class="card">
         <h2>Evidence & Details</h2>
         <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 8px; margin-bottom: 12px;">
